// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injectors when called with no deps, injectMemo() tracks used signals 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {},
    "sources": {
      "@memo(1)-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
      "@signal()-2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 4,
  },
  "@memo(1)-3": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "@signal()-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 1,
    "status": "Active",
    "weight": 2,
  },
  "@signal()-1": {
    "className": "Signal",
    "observers": {
      "@memo(1)-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
  "@signal()-2": {
    "className": "Signal",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 2,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`injectors when called with no deps, injectMemo() tracks used signals 2`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {},
    "sources": {
      "@memo(1)-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
      "@signal()-2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 13,
    "status": "Active",
    "weight": 4,
  },
  "@memo(1)-3": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "@signal()-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 11,
    "status": "Active",
    "weight": 2,
  },
  "@signal()-1": {
    "className": "Signal",
    "observers": {
      "@memo(1)-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 11,
    "status": "Active",
    "weight": 1,
  },
  "@signal()-2": {
    "className": "Signal",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 2,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`injectors when called with no deps, injectMemo() tracks used signals 3`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {},
    "sources": {
      "@memo(1)-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
      "@signal()-2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 33,
    "status": "Active",
    "weight": 4,
  },
  "@memo(1)-3": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "@signal()-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 11,
    "status": "Active",
    "weight": 2,
  },
  "@signal()-1": {
    "className": "Signal",
    "observers": {
      "@memo(1)-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 11,
    "status": "Active",
    "weight": 1,
  },
  "@signal()-2": {
    "className": "Signal",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 22,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`injectors when called with no deps, injectMemo() tracks used signals 4`] = `{}`;
